Use Checkstyle 6.14.1 and update metadata accordingly

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
@@ -82,3 +82,7 @@ AbbreviationAsWordInName.ignoreFinal = allow to skip variables with final modifi
 AbbreviationAsWordInName.ignoreStatic = allow to skip variables with static modifier.
 AbbreviationAsWordInName.ignoreOverriddenMethod = Allows to ignore methods tagged with @Override annotation (that usually mean inherited name).
 AbbreviationAsWordInName.tokens = Tokens to check.
+
+CatchParameterName.name = Catch Parameter Name
+CatchParameterName.desc =  Checks that catch parameter names conform to a format specified by the format property. Default pattern has the following characteristic:<ul><li>allows names beginning with two lowercase letters followed by at least one uppercase or lowercase letter</li><li>allows e abbreviation (suitable for exceptions end errors)</li><li>allows ex abbreviation (suitable for exceptions)</li><li>allows t abbreviation (suitable for throwables)</li><li>prohibits numbered abbreviations like e1 or t2</li><li>prohibits one letter prefixes like pException</li><li>prohibits two letter abbreviations like ie or ee</li><li>prohibits any other characters than letters</li></ul>
+CatchParameterName.format = Specifies valid identifiers.
