--- a/net.sf.eclipsecs.parent/pom.xml
+++ b/net.sf.eclipsecs.parent/pom.xml
@@ -21,12 +21,12 @@
 
     <properties>
         <tycho-version>0.24.0</tycho-version>
+        <tycho-extras-version>0.24.0</tycho-extras-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <scm>
-        <connection>scm:cvs:pserver:anonymous:@dev.eclipse.org:/cvsroot/eclipse</connection>
-        <developerConnection>scm:cvs:pserver:anonymous:@dev.eclipse.org:/cvsroot/eclipse</developerConnection>
+        <connection>scm:git://git.code.sf.net/p/eclipse-cs/git</connection>
     </scm>
     <build>
         <finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
@@ -68,6 +68,41 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.eclipse.tycho</groupId>
+                    <artifactId>tycho-packaging-plugin</artifactId>
+                    <version>${tycho-version}</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.eclipse.tycho.extras</groupId>
+                            <artifactId>tycho-buildtimestamp-jgit</artifactId>
+                            <version>${tycho-extras-version}</version>
+                        </dependency>
+                    </dependencies>
+                    <configuration>
+                        <timestampProvider>jgit</timestampProvider>
+                        <jgit.ignore>
+                            pom.xml
+                        </jgit.ignore>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.eclipse.tycho</groupId>
+                    <artifactId>tycho-p2-plugin</artifactId>
+                    <version>${tycho-version}</version>
+                    <configuration>
+                        <baselineRepositories>
+                            <repository>
+                                <url>git://git.code.sf.net/p/eclipse-cs/git</url>
+                            </repository>
+                        </baselineRepositories>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <repositories>
