Use "eclipse-repository" artifact type for Tycho to generate the p2-repo (update-site)

--- a/net.sf.eclipsecs.parent/pom.xml
+++ b/net.sf.eclipsecs.parent/pom.xml
@@ -101,6 +101,11 @@
                         </baselineRepositories>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.eclipse.tycho</groupId>
+                    <artifactId>tycho-versions-plugin</artifactId>
+                    <version>${tycho-version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
