--- a/net.sf.eclipsecs.ui/.settings/org.eclipse.core.resources.prefs
+++ b/net.sf.eclipsecs.ui/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Tue Nov 24 22:32:59 CET 2009
 eclipse.preferences.version=1
 encoding//src/net/sf/eclipsecs/ui/quickfixes/messages.properties=8859_1
+encoding/<project>=UTF-8
