Update to Checkstyle 6.18.0

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -147,6 +147,7 @@ RequireThis.checkFields  = whether we should check fields usage or not
 RequireThis.checkMethods = whether we should check methods usage or not
 RequireThis.desc         = Checks that code doesn't rely on the "this." default, i.e. references to instance variables and methods of the present object are explicitly of the form "this.varName" or "this.methodName(args)".
 RequireThis.name         = Require This
+RequireThis.validateOnlyOverlapping = Whether to check only overlapping by variables or arguments.
 
 ReturnCount.desc   = Restricts the number of return statements. Default = 2. Ignores specified methods (<code>equals()</code> by default).<br/>\r\nRationale: Too many return points can be indication that code is attempting to do too much or may be difficult to understand.
 ReturnCount.format = method names to ignore
