--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
@@ -70,6 +70,7 @@ EmptyLineSeparator.desc = Checks for empty line separators after header, package
 EmptyLineSeparator.tokens = assignments to check
 EmptyLineSeparator.allowNoEmptyLineBetweenFields = Allow no empty line between fields
 EmptyLineSeparator.allowMultipleEmptyLines = Allow multiple lines between fields
+EmptyLineSeparator.allowMultipleEmptyLinesInsideClassMembers = Allow multiple empty lines inside class members
 
 SeparatorWrap.name = Separator Wrap
 SeparatorWrap.desc = Checks line wrapping with separators.
