Update to Checkstyle 6.19.0

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
@@ -76,3 +76,7 @@ SeparatorWrap.name = Separator Wrap
 SeparatorWrap.desc = Checks line wrapping with separators.
 SeparatorWrap.option = policy on how to wrap lines
 SeparatorWrap.tokens = tokens to check.
+
+SingleSpaceSeparator.name = Single Space Separator
+SingleSpaceSeparator.desc = Checks that non-whitespace characters are separated by no more than one whitespace. Separating characters by tabs or multiple spaces will be reported. Currently the check doesn't permit horizontal alignment. To inspect whitespaces before and after comments, set the property validateComments to true.
+SingleSpaceSeparator.validateComments = If set to true, whitespaces surrounding comments will be ignored.
