--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -152,6 +152,7 @@ RequireThis.validateOnlyOverlapping = Whether to check only overlapping by varia
 ReturnCount.desc   = Restricts the number of return statements. Default = 2. Ignores specified methods (<code>equals()</code> by default).<br/>\r\nRationale: Too many return points can be indication that code is attempting to do too much or may be difficult to understand.
 ReturnCount.format = method names to ignore
 ReturnCount.max    = maximum allowed number of return statements
+ReturnCount.maxForVoid = maximum allowed number of return statements in void methods/constructors/lambdas
 ReturnCount.name   = Return Count
 
 SimplifyBooleanExpression.desc = Checks for overly complicated boolean expressions. Currently finds code like  <code>if (b == true), b || true, !false</code>, etc.<br/>\r\nRationale: Complex boolean logic makes code hard to understand and maintain.
