--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 6.19.0",
+    "template": "partials/releases/6.19.0/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 6.16.0",
     "template": "partials/releases/6.16.0/release_notes.html",
     "open": true
@@ -16,8 +21,7 @@
   },
   {
     "version": "Release 6.11.0",
-    "template": "partials/releases/6.11.0/release_notes.html",
-    "open": true
+    "template": "partials/releases/6.11.0/release_notes.html"
   },
   {
     "version": "Release 6.9.0",
