Upgrade to Checkstyle 7.1

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
@@ -30,6 +30,8 @@ VisibilityModifier.name                = Visibility Modifier
 VisibilityModifier.packageAllowed      = Whether package visible members are allowed or not.
 VisibilityModifier.protectedAllowed    = Whether protected members are allowed or not.
 VisibilityModifier.publicMemberPattern = Pattern for public members that should be ignored.
+VisibilityModifier.allowPublicFinalFields = allows public final fields
+VisibilityModifier.allowPublicImmutableFields = allows immutable fields to be declared as public if defined in final class
 VisibilityModifier.immutableClassCanonicalNames = immutable classes canonical names
 VisibilityModifier.ignoreAnnotationCanonicalNames = ignore annotations canonical names
 
