--- a/net.sf.eclipsecs.parent/pom.xml
+++ b/net.sf.eclipsecs.parent/pom.xml
@@ -20,8 +20,8 @@
     </modules>
 
     <properties>
-        <tycho-version>0.24.0</tycho-version>
-        <tycho-extras-version>0.24.0</tycho-extras-version>
+        <tycho-version>0.25.0</tycho-version>
+        <tycho-extras-version>0.25.0</tycho-extras-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -87,6 +87,7 @@
                         <jgit.ignore>
                             pom.xml
                         </jgit.ignore>
+                        <jgit.dirtyWorkingTree>ignore</jgit.dirtyWorkingTree>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -100,11 +101,41 @@
                             </repository>
                         </baselineRepositories>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>attached-p2-metadata</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>p2-metadata</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.eclipse.tycho</groupId>
                     <artifactId>tycho-versions-plugin</artifactId>
                     <version>${tycho-version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.eclipse.tycho</groupId>
+                    <artifactId>tycho-source-plugin</artifactId>
+                    <version>${tycho.version}</version>
+                    <configuration>
+                        <strictSrcIncludes>false</strictSrcIncludes>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>plugin-source</id>
+                            <goals>
+                                <goal>plugin-source</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.eclipse.tycho.extras</groupId>
+                    <artifactId>tycho-source-feature-plugin</artifactId>
+                    <version>${tycho-extras-version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -112,9 +143,9 @@
 
     <repositories>
         <repository>
-            <id>mars</id>
+            <id>neon</id>
             <layout>p2</layout>
-            <url>http://download.eclipse.org/releases/mars/</url>
+            <url>http://download.eclipse.org/releases/neon/</url>
         </repository>
     </repositories>
 </project>
