--- a/net.sf.eclipsecs.ui/pom.xml
+++ b/net.sf.eclipsecs.ui/pom.xml
@@ -10,4 +10,13 @@
     <artifactId>net.sf.eclipsecs.ui</artifactId>
     <packaging>eclipse-plugin</packaging>
     <name>eclipse-cs UI Plugin</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-source-plugin</artifactId>
+                <version>${tycho-version}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
