--- a/net.sf.eclipsecs.parent/pom.xml
+++ b/net.sf.eclipsecs.parent/pom.xml
@@ -22,6 +22,7 @@
     <properties>
         <tycho-version>0.25.0</tycho-version>
         <tycho-extras-version>0.25.0</tycho-extras-version>
+        <tycho.scmUrl>scm:git://git.code.sf.net/p/eclipse-cs/git</tycho.scmUrl>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -81,6 +82,11 @@
                             <artifactId>tycho-buildtimestamp-jgit</artifactId>
                             <version>${tycho-extras-version}</version>
                         </dependency>
+                        <dependency>
+                            <groupId>org.eclipse.tycho.extras</groupId>
+                            <artifactId>tycho-sourceref-jgit</artifactId>
+                            <version>${tycho-extras-version}</version>
+                        </dependency>
                     </dependencies>
                     <configuration>
                         <timestampProvider>jgit</timestampProvider>
@@ -88,6 +94,9 @@
                             pom.xml
                         </jgit.ignore>
                         <jgit.dirtyWorkingTree>ignore</jgit.dirtyWorkingTree>
+                        <sourceReferences>
+                            <generate>true</generate>
+                        </sourceReferences>
                     </configuration>
                 </plugin>
                 <plugin>
