Update to Checkstyle 7.2

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/design/checkstyle-metadata.properties
@@ -2,6 +2,7 @@ Design.group = Class Design
 
 DesignForExtension.desc = Checks that classes are designed for extension. More specifically, it enforces a programming style where superclasses provide empty "hooks" that can be implemented by subclasses.<br/>\r\nThe exact rule is that nonprivate, nonstatic methods of classes that can be subclassed must either be\r\n<ul>\r\n<li>abstract or</li>\r\n<li>final or</li>\r\n<li>have an empty implementation</li>\r\n</ul>\r\nRationale: This API design style protects superclasses against beeing broken by subclasses. The downside is that subclasses are limited in their flexibility, in particular they cannot prevent execution of code in the superclass, but that also means that subclasses cannot corrupt the state of the superclass by forgetting to call the super method.
 DesignForExtension.name = Design For Extension
+DesignForExtension.ignoredAnnotations = Annotations which allow the check to skip the method from validation.
 
 FinalClass.desc = Checks that a class which has only private constructors is declared as final.
 FinalClass.name = Final Class
