#411 Group descriptions are not being parsed/shown

--- a/net.sf.eclipsecs.sample/src/net/sf/eclipsecs/sample/checks/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.sample/src/net/sf/eclipsecs/sample/checks/checkstyle-metadata.properties
@@ -1,2 +1,4 @@
+MyCustomChecks.desc = A beautiful description for my collection of custom Checkstyle modules.
+
 MethodLimit.name = Method Limit
 MethodLimit.desc = Checks that the number of methods of a class does not exeed a configured maximum
