--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
@@ -56,6 +56,8 @@ ParameterName.desc   = Checks that parameter names follow naming convention.
 ParameterName.format = Regular expression defining required naming pattern.
 ParameterName.name   = Parameter Names
 ParameterName.ignoreOverridden = Allows to skip methods with @Override annotation from validation.
+ParameterName.scope = Visibility scope of methods where parameters are checked.
+ParameterName.excludeScope = Visibility scope of methods where parameters are not checked.
 
 StaticVariableName.applyToPackage   = Controls whether to apply the check to package-protected static variable.
 StaticVariableName.applyToPrivate   = Controls whether to apply the check to private static variable.
