--- a/net.sf.eclipsecs.core/core.properties
+++ b/net.sf.eclipsecs.core/core.properties
@@ -23,9 +23,8 @@ PackageFilter.label       = files from packages
 ProjectRelativeCheckConfiguration.label = Project Relative Configuration
 RemoteCheckConfiguration.label = Remote Configuration
 
-GoogleChecks.description     = Checkstyle configurartion that checks the Google coding conventions (https://google-styleguide.googlecode.com/svn-history/r130/trunk/javaguide.html).
+GoogleChecks.description     = Checkstyle configuration that checks the Google coding conventions from Google Java Style that can be found at https://google.github.io/styleguide/javaguide.html.
 SunChecks.description        = Checkstyle configuration that checks the sun coding conventions.
-SunChecksEclipse.description = Slightly modified version of Sun Checks that better matches the default code formatter setting of Eclipse.
 
 UnOpenedFilesFilter.description = Excludes all files that are not opened in an editor.
 UnOpenedFilesFilter.label       = files not opened in editor
