#165 Add a button and/or a shortcut for configuration reload

--- a/net.sf.eclipsecs.ui/plugin.properties
+++ b/net.sf.eclipsecs.ui/plugin.properties
@@ -41,3 +41,6 @@ VotingPage.name = Voting
 
 CheckstylePreferenceTransfer.name = Checkstyle settings
 CheckstylePreferenceTransfer.description = Copies the workspace configuration for the Eclipse Checkstyle Plugin
+
+PurgeCaches.label = Purge Checkstyle caches
+PurgeCaches.tooltip = Purge Checkstyle caches
