--- a/net.sf.eclipsecs.core/build.properties
+++ b/net.sf.eclipsecs.core/build.properties
@@ -6,10 +6,7 @@ bin.includes = .,\
                license/,\
                plugin.xml,\
                schema/,\
-               sun_checks.xml,\
-               sun_checks_eclipse.xml,\
                core.properties,\
-               lib/dom4j-1.6.1.jar,\
-               google_checks.xml
+               lib/dom4j-1.6.1.jar
 source.. = src/
 
