--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/naming/checkstyle-metadata.properties
@@ -56,8 +56,7 @@ ParameterName.desc   = Checks that parameter names follow naming convention.
 ParameterName.format = Regular expression defining required naming pattern.
 ParameterName.name   = Parameter Names
 ParameterName.ignoreOverridden = Allows to skip methods with @Override annotation from validation.
-ParameterName.scope = Visibility scope of methods where parameters are checked.
-ParameterName.excludeScope = Visibility scope of methods where parameters are not checked.
+ParameterName.accessModifiers = Access modifiers of methods where parameters are checked.
 
 StaticVariableName.applyToPackage   = Controls whether to apply the check to package-protected static variable.
 StaticVariableName.applyToPrivate   = Controls whether to apply the check to private static variable.
