--- a/net.sf.eclipsecs.ui/plugin.properties
+++ b/net.sf.eclipsecs.ui/plugin.properties
@@ -43,4 +43,4 @@ CheckstylePreferenceTransfer.name = Checkstyle settings
 CheckstylePreferenceTransfer.description = Copies the workspace configuration for the Eclipse Checkstyle Plugin
 
 PurgeCaches.label = Purge Checkstyle caches
-PurgeCaches.tooltip = Purge Checkstyle caches
+PurgeCaches.tooltip = Purges internal Checkstyle caches to force reloading of auxiliary configuration files (e.g. suppression.xml)
