--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
@@ -14,9 +14,10 @@ IllegalImport.illegalPkgs = Comma (',') seperated list of illegal packages.
 IllegalImport.name        = Illegal Imports
 
 ImportControl.desc = Controls what can be imported in each package. Useful for ensuring that application layering rules are not violated, especially on large projects.<br/>\r\nThe DTD for a import control XML document is at http://www.puppycrawl.com/dtds/import_control_1_0.dtd. It contains documentation on each of the elements and attributes.<br/>\r\nThe check validates a XML document when it loads the document. To validate against the above DTD, include the following document type declaration in your XML document:\r\n<pre>\r\n<!DOCTYPE import-control PUBLIC\r\n    "-//Puppy Crawl//DTD Import Control 1.0//EN"\r\n    "http://www.puppycrawl.com/dtds/import_control_1_0.dtd">\r\n</pre>\r\n
-ImportControl.file = Name of the file containing the import control configuration.
 ImportControl.name = Import Control
-ImportControl.url  = url of the file containing the import control configuration.
+ImportControl.file = The location of the file containing the import control configuration. It can be a regular file, URL or resource path. It will try loading the path as a URL first, then as a file, and finally as a resource. 
+ImportControl.url  = URL of the file containing the import control configuration.<b>This property is deprecated. Please use the file property to load configurations from URLs.</b> 
+ImportControl.path = Regular expression of file paths to which this check should apply. Files that don't match the pattern will not be checked. The pattern will be matched against the full absolute file path. 
 
 ImportOrder.caseSensitive = whether strings comprision should be case sensitive or not
 ImportOrder.desc          = Checks the ordering/grouping of imports. Ensures that groups of imports come in a specific order (e.g., java. comes first, javax. comes first, then everything else) and imports within each group are in lexicographic order. Static imports must be at the end of a group and in lexicographic order amongst themselves.
