--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/whitespace/checkstyle-metadata.properties
@@ -60,6 +60,7 @@ WhitespaceAround.allowEmptyMethods      = allow empty method bodies
 WhitespaceAround.allowEmptyTypes        = allow empty class, interface and enum bodies
 WhitespaceAround.allowEmptyLoops        = allow empty loop bodies
 WhitespaceAround.allowEmptyLambdas      = allow empty lambda bodies
+WhitespaceAround.allowEmptyCatches      = allow empty catch bodies
 WhitespaceAround.desc                   = Checks that a token is surrounded by whitespace. Empty constructor and method bodies (blocks) of the form\r\n<pre>\r\npublic MyClass() {}      // empty constructor\r\npublic void func() {}    // empty method\r\n</pre>\r\nmay optionally be exempted from the policy using the <code>allowEmptyMethods</code> and <code>allowEmptyConstructors</code> properties.
 WhitespaceAround.name                   = Whitespace Around
 WhitespaceAround.tokens                 = Tokens to check.
