--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,4 +1,8 @@
-[
+[ {
+    "version": "Release 7.6.0",
+    "template": "partials/releases/7.6.0/release_notes.html",
+    "open": true
+  },
   {
     "version": "Release 7.3.0",
     "template": "partials/releases/7.3.0/release_notes.html",
@@ -16,8 +20,7 @@
   },
   {
     "version": "Release 6.19.0",
-    "template": "partials/releases/6.19.0/release_notes.html",
-    "open": true
+    "template": "partials/releases/6.19.0/release_notes.html"
   },
   {
     "version": "Release 6.16.0",
