--- a/net.sf.eclipsecs.parent/pom.xml
+++ b/net.sf.eclipsecs.parent/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.sf.eclipsecs</groupId>
     <artifactId>net.sf.eclipsecs.parent</artifactId>
-    <version>7.6.0-SNAPSHOT</version>
+    <version>8.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>net.sf.eclipsecs.parent</name>
 
@@ -154,7 +154,7 @@
         <repository>
             <id>neon</id>
             <layout>p2</layout>
-            <url>http://download.eclipse.org/releases/neon/</url>
+            <url>http://download.eclipse.org/releases/oxygen/</url>
         </repository>
     </repositories>
 </project>
