Update Checkstyle metadata from 7.6  to 8.0

--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/coding/checkstyle-metadata.properties
@@ -17,6 +17,7 @@ DeclarationOrder.ignoreModifiers    = whether to ignore modifier
 
 DefaultComesLast.desc = Check that the <code>default</code> is after all the cases in a <code>switch</code> statement.<br/>\r\nRationale: Java allows <code>default</code> anywhere within the <code>switch</code> statement. But it is more readable if it comes after the last case.
 DefaultComesLast.name = Default Comes Last
+DefaultComesLast.skipIfLastAndSharedWithCase = whether to allow <code>default</code> along with case if they are not last
 
 EmptyStatement.desc = Detects empty statements (standalone ;).
 EmptyStatement.name = Empty Statement
@@ -30,6 +31,7 @@ EqualsHashCode.name = Equals and HashCode
 
 ExplicitInitialization.desc = Checks if any class or object member explicitly initialized to default for its type value (<code>null</code> for object references, zero for numeric types and <code>char</code> and <code>false</code> for <code>boolean</code>.<br/>\r\nRationale: each instance variable gets initialized twice, to the same value. Java initializes each instance variable to its default value (0 or null) before performing any initialization specified in the code. So in this case, x gets initialized to 0 twice, and bar gets initialized to null twice. So there is a minor inefficiency. This style of coding is a hold-over from C/C++ style coding, and it shows that the developer isn't really confident that Java really initializes instance variables to default values.
 ExplicitInitialization.name = Explicit Initialization
+ExplicitInitialization.onlyObjectReferences = whether only explicit initializations made to null for objects should be checked
 
 FallThrough.checkLastCaseGroup = Whether we need to check last case group or not.
 FallThrough.desc               = Checks for fall through in switch  statements Finds locations where a <code>case</code> contains Java code - but lacks a <code>break, return, throw</code> or <code>continue</code> statement.<br/>\r\nThe check honores special comments to supress the warning. By default the text "fallthru", "fall through", "fallthrough", "falls through" and "fallsthrough" are recognized (case sensitive). The comment containing this words must be a one-liner and must be on the last none-empty line before the <code>case</code> triggering the warning or on the same line before the <code>case</code> (urgly, but possible).\r\n<pre>\r\nswitch (i){\r\ncase 0:\r\n    i++; // fall through\r\n\r\ncase 1:\r\n    i++;\r\n    // falls through\r\ncase 2: {\r\n    i++;\r\n}\r\n// fallthrough\r\ncase 3:\r\n    i++;\r\n/* fallthru */case 4:\r\n    i++\r\n    break;\r\n}\r\n</pre>\u0009\r\nNote: the check works in assumption that there is no unreachable code in the <code>case</code>.
