--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/metrics/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/metrics/checkstyle-metadata.properties
@@ -8,10 +8,16 @@ BooleanExpressionComplexity.tokens = tokens to check
 ClassDataAbstractionCoupling.desc = This metric measures the number of instantiations of other classes within the given class. This type of coupling is not caused by inheritance or the object oriented paradigm. Generally speaking, any abstract data type with other abstract data types as members has data abstraction coupling; therefore, if a class has a local variable that is an instantiation (object) of another class, there is data abstraction coupling. The higher the DAC, the more complex the data structure (classes) of the system.
 ClassDataAbstractionCoupling.max  = the maximum threshold allowed
 ClassDataAbstractionCoupling.name = Class Data Abstraction Coupling
+ClassDataAbstractionCoupling.excludedClasses = User-configured class names to ignore
+ClassDataAbstractionCoupling.excludeClassesRegexps = User-configured regular expressions to ignore classes
+ClassDataAbstractionCoupling.excludedPackages = User-configured packages to ignore
 
 ClassFanOutComplexity.desc = The number of other classes a given class relies on. Also the square of this has been shown to indicate the amount of maintenence required in functional programs (on a file basis) at least.
 ClassFanOutComplexity.max  = the maximum threshold allowed
 ClassFanOutComplexity.name = Class Fan Out Complexity
+ClassFanOutComplexity.excludedClasses = User-configured class names to ignore
+ClassFanOutComplexity.excludeClassesRegexps = User-configured regular expressions to ignore classes
+ClassFanOutComplexity.excludedPackages = User-configured packages to ignore
 
 CyclomaticComplexity.desc = Checks cyclomatic complexity against a specified limit. The complexity is measured by the number of if, while, do, for, ?:, catch, switch, case  statements, and operators && and || (plus one) in the body of a constructor, method, static initializer, or instance initializer. It is a measure of the minimum number of possible paths through the source and therefore the number of required tests. Generally 1-4 is considered good, 5-7 ok, 8-10 consider re-factoring, and 11+ re-factor now!
 CyclomaticComplexity.max  = the maximum threshold allowed
