--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/sizes/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/sizes/checkstyle-metadata.properties
@@ -44,3 +44,4 @@ MethodCount.maxPrivate   = maximum allowable number of private methods
 MethodCount.maxPackage   = maximum allowable number of package methods
 MethodCount.maxProtected = maximum allowable number of protected methods
 MethodCount.maxPublic    = maximum allowable number of public methods
+MethodCount.tokens = tokens to check
