--- a/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
+++ b/net.sf.eclipsecs.checkstyle/metadata/com/puppycrawl/tools/checkstyle/checks/imports/checkstyle-metadata.properties
@@ -12,6 +12,8 @@ AvoidStaticImport.name     = Avoid Static Imports
 IllegalImport.desc        = Checks for imports from a set of illegal packages. By default, the check rejects all <code>sun.*</code> packages since programs that contain direct calls to the sun.* packages are <a href="http://java.sun.com/products/jdk/faq/faq-sun-packages.html" target="_blank">not 100% Pure Java</a>. To reject other packages, set property <code>illegalPkgs</code> to a list of the illegal packages.
 IllegalImport.illegalPkgs = Comma (',') seperated list of illegal packages.
 IllegalImport.name        = Illegal Imports
+IllegalImport.illegalClasses = Class names to reject, if regexp variable is not set, checks if import equals class name. If regexp variable is set, then list of class name will be interpreted as regular expressions. Note, all properties for match will be used.
+IllegalImport.regexp = Whether the <b>illegalPkgs</b> and <b>illegalClasses</b> should be interpreted as regular expressions
 
 ImportControl.desc = Controls what can be imported in each package. Useful for ensuring that application layering rules are not violated, especially on large projects.<br/>\r\nThe DTD for a import control XML document is at http://www.puppycrawl.com/dtds/import_control_1_0.dtd. It contains documentation on each of the elements and attributes.<br/>\r\nThe check validates a XML document when it loads the document. To validate against the above DTD, include the following document type declaration in your XML document:\r\n<pre>\r\n<!DOCTYPE import-control PUBLIC\r\n    "-//Puppy Crawl//DTD Import Control 1.0//EN"\r\n    "http://www.puppycrawl.com/dtds/import_control_1_0.dtd">\r\n</pre>\r\n
 ImportControl.name = Import Control
